--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -33,6 +33,14 @@
 
 \Def Класс всех непрерывных функций на $X$ будем обозначать $C(X)$.
 
+\Def Компактом $K \subset \R$ будем называть множество, если из каждой числовой последовательности в нём можно выделить сходяющуюся числовую подпоследовательность сходяющуюся в нём же.
+
+\Theor{Эквивалентые определения компакта} Пусть $K \subset \R$. Тогда следующие услвоия эквивалентны:
+\begin{enumerate}
+    \item $K$ - компакт
+    \item $K$ - ограниченное и замкнутое множество
+\end{enumerate}
+
 \Th Пусть $K \subset \R$ - компакт, $f \in C(K)$. Тогда $f(K)$ тоже компакт.
 
 \Proof
