--- a/solutions/analysis/5.tex
+++ b/solutions/analysis/5.tex
@@ -1,1 +1,128 @@
 \subsection{Формула Тейлора с остаточным членом в форме Пеано или Лагранжа.}
+
+\Def Пусть $n \in \N, f: U_{\delta_0} (x_0) \to \R$ имеет $n$-ую конечную производную в точке $x_0$. Тогда полиномом Тейлора функции $f$с центром в точке $x_0$ будем называеть следующую функцию:
+\begin{equation*}
+    T_{x_0}^n[f](x) \overset{def}{=} \sum\limits_{k=0}^n \frac{f^{(k)} (x_0)}{k!} (x - x_0)^k
+\end{equation*}
+
+\Def Формальным $n$-ым остаточным членом формулы Тейлора функции $f$ с центром в точке $x_0$ называется
+\begin{equation*}
+    r^n_{x_0}[f](x) \overset{def}{=} f(x) - T_{x_0}^n[f](x), x \in U_{\delta_0}(x_0)
+\end{equation*}
+
+\Lemma Верны следующие равенства
+\begin{enumerate}
+    \item $\forall k \in 0 \dots n \hookrightarrow \frac{d^k}{dx^k} (x - x_0)^n = n(n-1)\dots(x - k + 1) (x - x_0)^{n-k}$
+    \item $\forall k > n \hookrightarrow \frac{d^k}{dx^k} (x - x_0)^n \equiv 0$
+\end{enumerate}
+
+\Proof
+
+Очень верится, что читатель брал производные от степенных функций за 2 года учебы в МФТИ, поэтому будем считать, что доказательство методом <<ну видно же>> пройдет.
+
+\Endproof
+
+\Lemma Пусть $\exists f^{(n)}(x_0) \in \R \Rightarrow \forall k \in 0 \dots n \hookrightarrow \frac{d^k \left(r^n_{x_0}[f]\right)}{dx^k} \bigg|_{x=x_0} = 0$
+
+\Proof
+
+Распишем производную и воспользуемся леммой выше:
+\begin{multline*}
+    \left.\frac{d^k \left(r^n_{x_0}[f]\right)}{dx^k}\right|_{x = x_0} \overset{def}{=}
+    f^{(k)}(x_0) - \left.\frac{d^k}{dx^k} \left[ \sum\limits_{m=0}^n \frac{f^{(m)}(x_0)}{m!} (x - x_0)^m \right] \right|_{x=x_0} =
+    f^{(k)}(x_0) - \\ - 
+    \underbrace{\left.\frac{d^k}{dx^k} \left[ \sum\limits_{m=0}^{k-1} \frac{f^{(m)}(x_0)}{m!} (x - x_0)^m \right] \right|_{x=x_0}}_{0} - 
+    \left.\frac{d^k}{dx^k}\frac{f^{(k)}(x_0)}{k!} (x - x_0)^k\right|_{x=x_0} - 
+    \underbrace{\left.\frac{d^k}{dx^k} \left[ \sum\limits_{m=k+1}^{n} \frac{f^{(m)}(x_0)}{m!} (x - x_0)^m \right] \right|_{x=x_0}}_{0} = \\
+    = f^{(k)}(x_0) - \frac{f^{(k)}(x_0)}{k!} \left. \underbrace{\frac{d^k}{dx^k} (x - x_0)^k}_{k!}\right|_{x=x_0} =
+    f^{(k)}(x_0) -  \frac{k! f^{(k)}(x_0)}{k!} = f^{(k)}(x_0) - f^{(k)}(x_0) = 0
+\end{multline*}
+
+\Endproof
+
+\Def Пусть $X \subset \R, f, g: X \to \R, x_0 \in X$. Будем говорить, что $f = o(g(x)), x \to x_0$, если $\exists \varepsilon: X \to \R: \lim\limits_{x \to x_0} \varepsilon(x) = 0$ и $f(x) = \varepsilon(x)g(x)$.
+
+\Theor{Формула Тейлора с остаточным членом в форме Пеано} Пусть $\exists f^{(n)}(x_0) \in \R$, тогда:
+\begin{equation*}
+    f(x) = \sum\limits_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x - x_0)^k + o((x - x_0)^n), x \to x_0
+\end{equation*}
+
+\Proof
+
+Заметим, что коль скоро $f$ $n$ раз диффернцируема в точке $x_0$, то она $(n-1)$-раз диффернцируема в некоторой её окрестности (в частности она непрерывна на замыкании этой окрестности).
+
+Вспомним тот факт, что:
+\begin{equation*}
+    r^n_{x_0}[f](x) \overset{def}{=} f(x) - T_{x_0}^n[f](x)
+\end{equation*}
+
+Значит, доказав, что $\lim\limits_{x \to x_0} \frac{r^n_{x_0}[f](x)}{(x - x_0)^n} = 0$ получим требуемое.
+
+Всюду далее $\varphi_n(x) = (x - x_0)^n$.
+
+Заметим следующее:
+
+\begin{equation*}
+    \frac{r^n_{x_0}[f](x)}{(x - x_0)^n} = \left\{ \left.(x - x_0)^n\right|_{x = x_0} = 0, \left.r^n_{x_0}[f](x)\right|_{x = x_0} = 0 \right\} = 
+    \frac{r^n_{x_0}[f](x) - r^n_{x_0}[f](x_0)}{\varphi(x) - \varphi(x_0)}
+\end{equation*}
+
+Заметим, что выполняются условия теоремы Коши о среднем, значит $\exists \xi \in (x, x_0):$
+
+\begin{equation*}
+    \frac{r^n_{x_0}[f](x) - r^n_{x_0}[f](x_0)}{\underbrace{(x - x_0)^n}_{\varphi_n(x)} - \underbrace{(x_0 - x_0)^n}_{\varphi_n(x_0)}} = \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi}}{\varphi_n'(\xi)} = 
+    \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi}}{n\varphi_{n-1}(\xi)}
+\end{equation*}
+
+Даоее аналогично перепишем результат выше:
+\begin{equation*}
+    \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi}}{n\varphi_{n-1}(\xi)} = \frac{1}{n} \cdot \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi} - \underbrace{\left.r^n_{x_0}[f](x)'\right|_{x = x_0}}_{0}}{\varphi_{n-1}(\xi) - \underbrace{\varphi_{n-1}(x_0)}_{0}}
+\end{equation*}
+
+Применим опять теорему Коши о среднем и получим $\xi_1 \in (\xi, x_0) \subset (x, x_0)$:
+\begin{equation*}
+    \frac{1}{n} \cdot \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi} - \underbrace{\left.r^n_{x_0}[f](x)'\right|_{x = x_0}}_{0}}{\varphi_{n-1}(\xi) - \underbrace{\varphi_{n-1}(x_0)}_{0}} = \frac{1}{n} \cdot \frac{\left.r^n_{x_0}[f](x)^{(2)}\right|_{x = \xi_1}}{\varphi'_{n-1}(\xi_1)} = 
+    \frac{1}{n(n-1)} \cdot \frac{\left.r^n_{x_0}[f](x)^{(2)}\right|_{x = \xi_1}}{\varphi_{n-2}(\xi_1)}
+\end{equation*}
+
+Повторяем предыдущий шаг $n - 1$ раз и получим:
+
+\begin{equation*}
+    \frac{r^n_{x_0}[f](x)}{(x - x_0)^n} = \dots = \frac{\left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = \xi_{n - 1}} - \left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = x_0}}{n! (\xi_{n-1} - x_0)}, \xi_{n-1} \in (\xi_{n-2}, x_0) \subset (x_0, x)
+\end{equation*}
+
+Теперь в силу того, что $\xi_{n-1} \in (x_0, x)$, то если мы будем $\xi_{n-1}$ воспринимать как функцию от $x$, то $\lim\limits_{x \to x_0} \xi_{n-1} = x_0, \xi_{n-1} \neq x_0$.
+
+Значит можем применить теорему о замене переменной под знаком предела:
+
+\begin{multline*}
+    \lim\limits_{x \to x_0} \frac{\left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = \xi_{n - 1}(x)} - \left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = x_0}}{n! (\xi_{n-1}(x) - x_0)} =
+    \lim\limits_{\xi \to x_0} \frac{\left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = \xi} - \left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = x_0}}{n! (\xi - x_0)} = \\
+    = \frac{1}{n!} \lim\limits_{\xi \to x_0} \frac{\left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = \xi} - \left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = x_0}}{(\xi - x_0)} = 
+    \frac{1}{n!} \left. r^n_{x_0}[f](x)^{(n)} \right|_{x = x_0} = 0
+\end{multline*}
+
+Значит:
+
+\begin{equation*}
+    \lim\limits_{x \to x_0} \frac{r^n_{x_0}[f](x)}{(x - x_0)^n} = \lim\limits_{x \to x_0} \frac{\left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = \xi_{n - 1}(x)} - \left.r^n_{x_0}[f](x)^{(n-1)}\right|_{x = x_0}}{n! (\xi_{n-1}(x) - x_0)} = 0
+\end{equation*}
+
+\Endproof
+
+\Theor{Формула Тейлора с остаточным членом в форме Лангранжа} Пусть $\exists f^{(n+1)}(x), \forall x \in U_\delta(x_0)$, тогда
+\begin{equation*}
+    f(x) = \sum\limits_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{f^{(n+1)}(\xi)}{(n+1)!} (x - x_0)^{n+1}, \xi \in (x_0, x)
+\end{equation*}
+
+\Proof
+
+Применим теорему Коши о среднем $n+1$ для $\frac{r^n_{x_0}[f](x)}{(x - x_0)^{n + 1}}$. Получим $\frac{\left.(r^n_{x_0}[f](x))^{(n + 1)}\right|_{x = \xi_{n+1}}}{(n+1)!}$.
+
+\begin{equation*}
+    \frac{\left.(r^n_{x_0}[f](x))^{(n + 1)}\right|_{x = \xi_{n+1}}}{(n+1)!} = \frac{f^{(n+1)}(\xi_{n+1})}{(n+1)!}
+\end{equation*}
+
+Положив $\xi := \xi_{n+1}$, получаем требуемое.
+
+\Endproof
