--- a/solutions/analysis/6.tex
+++ b/solutions/analysis/6.tex
@@ -1,1 +1,189 @@
 \subsection{Исследование функций одной переменной при помощи первой и второй производных на монотонность, локальные экстремумы, выпуклость. Необходимые условия, достаточные условия.}
+
+\subsubsection{Монотонность}
+
+\Th Пусть $f$ диффиренцируема на $(a, b)$. Тогда
+
+\begin{enumerate}
+    \item $f'(x) \geq 0 \;\forall x\in (a, b) \quad\iff\quad f$ (нестр.) возрастает на $(a, b)$,
+    \item $f'(x) \leq 0 \;\forall x\in (a, b) \quad\iff\quad f$ (нестр.) убывает на $(a, b)$, 
+    \item $f'(x) > 0 \;\forall x\in (a, b) \Rightarrow f$ cтр. возрастает на $(a, b)$,
+    \item $f'(x) < 0 \;\forall x\in (a, b) \Rightarrow f$ cтр. убывает на $(a, b)$.
+\end{enumerate}
+
+\Proof
+
+Докажем 1.
+
+Пусть $f'(x) \geq 0 \;\forall x\in (a,b)$. Тогда $\forall x, y \in (a, b): x < y$ выполнено $f(y) - f(x) = f'(\xi) (y-x) \geq 0 \Rightarrow f(y) \geq f(x)$.
+
+В другую сторону: пусть $f$ нестрого возрастает. Тогда фиксируем $x_0 \in (a, b)$ и для произвольного $x \in (a, b)$ получаем 
+
+\begin{equation*}
+    \frac{f(x)-f(x_0)}{x-x_0} \geq 0.
+\end{equation*}
+
+Так как $f$ дифф. в $x_0$, то, переходя к пределу, получим $f'(x_0) \geq 0$. $x_0$ может быть выбрано произвольно на $(a, b)$.
+
+Пункт 2 доказывается аналогично.
+
+Пусты 3 и 4 доказываются заменой аналогично, заменой нестрогих знаков на строгие.
+
+\Endproof
+
+\Note Заметим, что пункты 3 и 4 верны лишь в одну сторону. Контрпример: $f(x) = x^3$. На всей числовой прямой $f$ строго возрастает, однако $f'(0) = 0$. Из строго возрастания/убывания не следует, что производная всюду положительна/отрицательна.
+
+\subsubsection{Экстремумы}
+
+\Theor{Достаточное условие локального экстремума}
+
+Пусть $f \in U_\delta (x_0)$ и диф. в $\mathring{U} (x_0)$.
+
+Тогда если $f'$ меняет знак при переходе через $x_0$, то $x_0$ - точка локального экстремума. 
+
+(При этом если знак меняется с - на +, то это локальный минимум, а если с + на -, то локальный максимум)
+
+\Proof
+
+Если $x \in \mathring{U} (x_0)$, то по теореме Лагранжа о среднем $f(x) - f(x_0) = f'(\xi(x))(x-x_0)$. 
+
+Если $f'(x) \geq 0 \;\forall x \in (x_0 - \delta, x_0)$ и $f'(x) \leq 0 \;\forall x \in (x_0, x_0 + \delta)$, то в левой полуокрестности $f(x) \leq f(x_0)$, в правой -- $f(x) \leq f(x_0)$, а значит $x_0$ - нестрогий локальный максимум.
+
+\Endproof
+
+\Note Аналогично рассматриваются нестрогий локальный минимум, а также строгие локальные максимум и минимум.
+
+\Theor{Достаточное условие локального экстремума в терминах высших производных}
+
+Пусть $\exists f^{(n)} (x_0), \;n\in\N$. При этом $f^{(i)}(x_0)=0 \;\forall i\in\{1, \dots, n-1\}$, а $f^{(n)}(x_0) \neq 0$.
+
+Тогда 
+
+\begin{enumerate}
+    \item если $n$ нечетно, то $x_0$ не является точной экстремума;
+    \item Если $n$ четно, то $x_0$ -- строгий локальный экстремум (минимум, если $f^{(n)}(x_0) > 0$; максимум, если $f^{(n)}(x_0) < 0$).
+\end{enumerate}
+
+\Proof
+
+Разложим по формуле Тейлора:
+
+\begin{gather*}
+    f(x) = f(x_0) + \sum _{k=1}^{n-1} \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{f^{(n)}(x_0)}{n!} (x-x_0)^n + o((x-x_0)^n) \\
+    \frac{f(x)-f(x_0)}{x-x_0} = \frac{f^{(n)}(x_0)}{n!} + \eps(x), \eps(x)\rightarrow 0, x\rightarrow x_0
+\end{gather*}
+
+Если $n$ четно и $f^{(n)}(x_0) > 0$, то для достаточно малой окрестности $x_0$ правая часть будет положительна. А $(x-x_0)^n$ всегда положительно в проколотой окрестности при четном n. А значит $f(x) - f(x_0) > 0$ для любого $x$ в достаточно малой окрестности.
+
+Аналогично для $f^{(n)}(x_0) < 0$.
+
+Если же $n$ нечетно, то знак $(x-x_0)^n$ меняется при переходе через $x_0$, то знак $f(x) - f(x_0)$ тоже должен меняться, так как знак правой части не изменяется в достаточно малой окрестности. А значит $x_0$ - не экстремум.
+
+\Endproof
+
+\Note В другую сторону контрпример:
+
+\begin{equation*}
+    f(x) = 
+    \begin{cases}
+        e^{-\frac{1}{x^2}}, &x\neq 0, \\
+        0, &x=0.
+    \end{cases}
+\end{equation*}
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=90mm]{pix/6_1.png}
+\end{figure}
+
+\Theor{Необходимое условие экстремума в терминах 2-й производной}
+
+Пусть $\exists f^{(2)}(x_0)$. Тогда, если $x_0$ -- точка локального экстремума, то $f'(x_0) = 0$ и при этом $f''(x_0) \leq 0$ для максимума и $f''(x_0) \geq 0$ для минимума.
+
+\Proof
+
+То что $f'(x_0) = 0$ следует из теоремы Ферма.
+
+Докажем для $x_0$ - локальный минимум.
+Предположим противное: пусть $f''(x_0) < 0$. Тогда по предыдущей теореме $x_0$ - строгий локальный максимум. Противоречие. Значит $f''(x_0) \geq 0$.
+
+Аналогично для максимума.
+
+\Endproof
+
+\subsubsection{Выпуклость и точки перегиба}
+
+\Def Функция $f: (a, b) \rightarrow \R$ называется выпуклой вниз на $(a, b)$, если $forall x_1, x_2 \in (a, b) \forall t \in [0, 1] \hookrightarrow f(tx_1 + (1-t)x_2) \leq tf(x_1) + (1-t) f(x_2)$.
+
+Аналогично для выпуклой вверх функции.
+
+\Note Выпуклые вверх функции также называют вогнутыми.
+
+\Theor{}
+
+Пусть $f: (a, b) \rightarrow \R$ дважды дифференцируема.
+
+Тогда 
+\begin{enumerate}
+    \item $f$ выпукла вниз $\iff f''(x) \geq 0 \,\forall x\in(a, b)$.
+    \item $f$ выпукла вверх $\iff f''(x) \leq 0 \,\forall x\in(a,b)$. 
+\end{enumerate}
+
+\Proof
+
+Пусть $f$ выпукла вниз. Фиксируем $x_0 \in (a, b)$. Выберем $u \in (0, \min{x_0 - a, b - x_0})$.
+
+$x_1 = x_0 - u; x_2 = x_0 + u$. $x_0 = \frac{x_1 + x_2}{2}$.
+
+\begin{gather*}
+    f(x_1) = f(x_0) + f'(x_0)(-u) + \frac{f''(x_0) u^2}{2} + o(u^2), u\rightarrow 0, \\
+    f(x_2) = f(x_0) + f'(x_0)u + \frac{f''(x_0) u^2}{2} + o(u^2), u\rightarrow 0.
+\end{gather*}
+
+Используем условие выпуклости при $t = \frac{1}{2}$:
+
+\begin{gather*}
+    f(x_0) \leq \frac{f(x_1) + f(x_2)}{2} = f(x_0) + \frac{f''(x_0) u^2}{2} + o(u^2)
+\end{gather*}
+
+Откуда $\frac{f''(x_0) u^2}{2} + o(u^2) \geq 0$. Поделим на $u^2$: $\frac{f''(x_0)}{2} + \eps(1) \geq 0$. Переходя к пределу в неравенстве, получим $f''(x_0) \geq 0$.
+
+Докажем в другую сторону: пусть $f''(x) \geq 0 \,\forall x \in (a,b)$. 
+
+Фиксируем произвольные $x_1, x_2 \in (a, b)$ и $t \in (0, 1)$. Покажем, что $f(tx_1 + (1-t)x_2) \leq tf(x_1) + (1-t) f(x_2)$. Обозначим $x_0 = tx_1 + (1-t)x_2$. По формуле Тейлора с остаточным членом в форме Лагранжа:
+
+\begin{gather*}
+    f(x_1) = f(x_0) + f'(x_0) (x_1 - x_0) + \frac{f''(\xi_1)}{2!} (x_1 - x_0)^2, \\
+    f(x_2) = f(x_0) + f'(x_0) (x_2 - x_0) + \frac{f''(\xi_2)}{2!} (x_2 - x_0)^2.
+\end{gather*}
+
+Посколько вторые производные неотрицательны,
+
+\begin{gather*}
+    f(x_1) \geq f(x_0) + f'(x_0) (x_1 - x_0), \\
+    f(x_2) \geq f(x_0) + f'(x_0) (x_2 - x_0).
+\end{gather*}
+
+Откуда 
+
+\begin{gather*}    
+    tf(x_1) + (1-t)f(x_2) \geq tf(x_0) + (1-t)f(x_0) + tf'(x_0)(x_1 - x_0) + (1-t)f'(x_0)(x_2-x_0) = \\ 
+    = f(x_0) + f'(x_0)((fx_1 + (1-t)x_2) + (tx_0 + (1-t)x_0)) = f(x_0) + f''(x_0) * (x_0 - x_0) = f(x_0).
+\end{gather*}
+
+\Endproof
+
+\Def Пусть $f \in C(U_\delta(x_0)); \exists f'(x_0) \in \overline{\R}$ и при этом $f$ выпукла вниз в левой полуокрестности и вверх в правой полуокрестности (или вверх в левой полуокрестности и вниз в правой полуокрестности). Тогда $x_0$ называется точкой перегиба $f$. 
+
+\Theor{Критерий точки перегиба}
+
+Пусть $f \in C(U_\delta (x_0)); \exists f'(x_0) \in \overline{\R}$. И пусть $f$ дважды дифференцируема в $\mathring{U}_delta (x_0)$.
+
+Тогда $x_0$ -- точка перегиба $f$ тогда и только тогда, когда выполнено любое из следующих условий:
+
+\begin{enumerate}
+    \item $f''(x) \geq 0 \,\forall x \in (x_0 - \delta, x_0)$ и $f''(x) \leq 0 \,\forall (x_0, x_0+\delta)$;
+    \item $f''(x) \leq 0 \,\forall x \in (x_0 - \delta, x_0)$ и $f''(x) \geq 0 \,\forall (x_0, x_0+\delta)$;
+\end{enumerate}
+
+Доказательство состоит в применении определения и критерия выпуклости.
