--- a/main.tex
+++ b/main.tex
@@ -9,9 +9,10 @@
 \newcommand{\coursename}{Гос 5 с.}
 
 \author{
-    Денис Войтенко \\
+    Фисман Максим \\
     Михаил Фурманов \\
-    Сиденко Олег
+    Сиденко Олег \\
+    Денис Войтенко
 }
 
 \newcommand{\coursedate}{Осень 2025}
