--- a/solutions/analysis/8.tex
+++ b/solutions/analysis/8.tex
@@ -1,1 +1,100 @@
 \subsection{Достаточные условия дифференцируемости функции нескольких переменных.}
+
+В рамках этого билета считается, что $G \subset \R^n$ -- непустое открытое множество.
+
+\Def Функция $f: G \to \R$ называется дифференцируемой в точке $x^0 \in G$, если $\exists$ линейное отображение $A: \R^n \to \R$ (или, что то же самое, вектор $\overline{A}$), такое что $\forall h\in \R^n$ с достаточно малой нормой выполнено, что $f(x' + h) = f(x^0) + A(h) + o(||h||)$.
+
+При этом само отображение $A$ называется дифференциалом $f$ в точке $x^0$ и обозначается $d_x f$, а вектор $\overline{A}$ называется градиентом и обозначается $grad f(x_0)$ или $\nabla_{x_0} f$.
+
+\Def Пусть $l \in \R^n, x_0 \in G, f:G \to \R$. Будем говорить, что $f$ имеет производную в точке $x_0$ по направлению $l$, если
+
+\begin{equation*}
+    \exists \lim_{t \to +0} \frac{f(x^0 + t) - f(x^0)}{t} \in \R.
+\end{equation*}
+
+\Def Пусть $f: G \to \R$. Частной производной функции $f$ по $i$-й координате ($i \in {1, \dots, n}$) в точке $x^0$ называется 
+
+\begin{equation*}
+    \lim_{x_i \to x^0_i} \frac{f(x^0_1, x^0_2, \dots, x_i, \dots, x^0_n) - f(x^0_1, \dots, x^0_i, \dots, x^0_n)}{x_i - x^0_i}
+\end{equation*}
+
+и обозначается $\frac{\partial f}{\partial x}$.
+
+\Theor{Достаточное условие дифференцируемости функции нескольких переменных в точке}
+
+Пусть $f: G \to \R$ и $\exists \delta > 0: \;\forall x \in B_\delta (x_0) \;\forall i \in \{1, \dots, n\} \;\exists \frac{\partial f}{\partial x} (x) \in \R$ и пусть $\forall i \in \{1, \dots, n\} \frac{\partial f}{\partial x_i}$ непрерывна в $x_0$ как функция от $x$.
+
+Тогда $f$ дифференцируема в $x_0$. 
+
+\Proof
+
+Дадим доказательство в двумерном случае, так как в многомерном аналогично.
+
+Идея доказательства в том, чтобы от точки $(x^0, y^0)$ дойти до $(x, y)$, перпендикулярными шагами вдоль осей координат, пользуясь покомпонентной дифференцируемостью.
+
+Пусть $x = x^0 + h_1, y = y^0 + h_2$.
+
+\begin{gather*}
+    f(x, y) - f(x^0, y^0) = f(x^0 + h_1, y^0 + h_2) - f(x^0, y^0) = \\
+    = \left[f(x^0 + h_1, y^0+h_2) - f(x^0 + h_1, y^0)\right] + \left[f(x^0 + h_1, y^0) - f(x^0, y^0)\right] = \dots
+\end{gather*}
+
+Так как $f$ дифференцируема по $y$ на некотором интервале, содержащем отрезок $[y^0, y^0 + h_2]$, то можно применить теорему Лагранжа о среднем по второй координате, преобразовав первую скобку: $f(x^0 + h_1, y^0+h_2) - f(x^0 + h_1, y^0) = f'_y(x^0 + h_1, \xi) \cdot h_2 = f'_y(x^0 + h_1, y^0 + \theta_2 h_2) \cdot h_2$.
+
+Аналогично для второй слагаемого применим теорему Лагранжа по первой координате: $f(x^0 + h_1, y^0) - f(x^0, y^0) = f'_x(x^0 + \theta_1 h_1, y^0) \cdot h_1$.
+
+\begin{gather*}
+    \dots = \frac{\partial f}{\partial x} (x^0 + \theta_1 h_1, y^0) \cdot h_1 + \frac{\partial f}{\partial y}(x^0 + h_1, y^0 + \theta_2 h_2) \cdot h_2 = \\
+    = \left\{\frac{\partial f}{\partial x} (x^0 + \theta_1 h_1, y^0) - \frac{\partial f}{\partial x} (x^0, y^0)\right\} h_1 + \frac{\partial f}{\partial x} (x^0, y^0) h_1 + \\
+    + \left\{\frac{\partial f}{\partial y}(x^0 + h_1, y^0 + \theta_2 h_2) - \frac{\partial f}{\partial y} (x^0, y^0)\right\} h_2 + \frac{\partial f}{\partial y} (x^0, y^0) h_2.
+\end{gather*}
+
+Итак, мы доказали, что разница $f(x, y) - f(x^0, y^0)$ раскладывается как частная производная по $x$ умножить на вектор $h_1$ плюс частная производная по $y$ умножить на вектор $h_2$ плюс некая поправка (в фигурных скобках). Остается доказать, что эта поправка является о-малым от $||h||$. 
+
+Так как частные производные непрерывны, то обе фигурные скобки стремятся к 0 при $(h_1, h_2) \to (0, 0)$. Их можно обозначить $\eps_1(h_1, h_2), \eps_2(h_1, h_2)$. 
+
+Тогда 
+
+\begin{equation*}
+    \eps_1(h_1, h_2) h_1 + \eps_2(h_1, h_2) h_2 = \left(\frac{\eps_1(h_1, h_2) h_1}{||h||} + \frac{\eps_2(h_1, h_2) h_2}{ ||h||}\right) ||h|| \leq \eps(h_1, h_2) ||h|| = o(||h||).
+\end{equation*}
+
+\Endproof
+
+Дополнительно: необходимые условия дифференцируемости.
+
+\Theor{Первое необходимое условие дифференцируемости (в терминах непрерывности)}
+
+Пусть $f: G \to R$ дифференцируема в $x_0 \in G$. 
+
+Тогда она непрерывна в $x_0$. 
+
+\Proof Доказывается переходом к пределу при $x \to x_0$ в равенстве в определении дифференцируемости. \Endproof
+
+\Theor{Второе необходимое условие дифференцируемости (в терминах производных по направлению)}
+
+Пусть $f: G \to R$ дифференцируема в $x_0 \in G$. 
+
+Тогда $\forall l \in \R^n \;\exists \frac{\partial f}{\partial l}(x^0)$, и причем $\frac{\partial f}{\partial l} (x^0) = <grad f(x^0), l>$.
+
+\Proof Доказывается переходом к пределу в равенстве $\frac{f(x^0 + tl) - f(x^0)}{t} = \frac{<grad f(x^0), tl>}{t} + \frac{\eps_{x^0} (tl) ||tl||}{t}$ \Endproof
+
+\Note Контрпример, почему это условие не является достаточным: 
+
+\begin{equation*}
+    f(x, y) = 
+    \begin{cases}
+        0, &y\neq x^2 \text{ или } x=y=0\\
+        1, &y=x^2, \text{ кроме } x=y=0
+    \end{cases}
+\end{equation*}
+
+
+\Theor{Третье необходимое условие дифференцируемости (в терминах частных производных)}
+
+Пусть $f: G \to R$ дифференцируема в $x_0 \in G$. 
+
+Тогда $\forall i \in \{1, \dots, n\} \;\exists \frac{\partial f}{\partial x_i} (x^0) = \left(grad f(x^0)\right)_i$.
+
+\Proof Доказывается применением предыдущей теоремы для направлений $l^+, l^-$ вдоль осей координат. \Endproof
+
