--- a/solutions/logic/29.tex
+++ b/solutions/logic/29.tex
@@ -1,1 +1,73 @@
 \subsection{Деревья. Эквивалентные определения дерева}
+
+\Def \textit{Графом} называют $G = \langle V, E \rangle$. Где $V$ - множество объектов (вершин), а $E$ - множество пар объектов из $V$ (ребер).
+
+\Def Если считаем, что $\forall u, v \in V \; (u, v) = (v, u)$, то граф называется \textit{ориентированным}.
+
+\Def Если считаем, что $\forall u, v \in V \; (u, v) \ne (v, u)$, то граф называется \textit{неориентированным}.
+
+\Def Маршрутом в графе называют последовательность $(v_1, e_1, v_2, e_2 \dots e_k, v_{k+1})$, где $v_i \in V$, $e_i = (v_i, v_i{+1}) \in E$.
+
+\Def \textit{Путь} --- маршрут, в котором все ребра различны.
+
+\Def \textit{Простой путь} --- маршрут, в котором все вершины, кроме, может быть, первой и последней, различны.
+
+\Def Замкнутый путь (если $v_1 = v_{k+1}$) называется \textit{циклом}.
+
+\Def Замкнутый простой путь называется \textit{простым циклом}.
+
+\Def Граф называется \textit{связным}, если между любыми двумя различными вершинами в нем существует маршрут.
+
+Рассмотрим неориентированный граф.
+
+\Statement Следующие определения \textit{дерева} эквивалентны:
+
+\begin{enumerate}
+    \item Связный граф без циклов
+    \item Между любыми двумя вершинами существует ровно один простой путь
+    \item Связный граф, в котором $|E| = |V| - 1$
+    \item Граф без циклов, в котором $|E| = |V| - 1$
+\end{enumerate}
+
+$\square$
+
+План доказательства: 
+
+\begin{enumerate}
+    \item $(1) \Rightarrow (2)$
+    \item $(2) \Rightarrow (3)$
+    \item $(3) \Rightarrow (4)$
+    \item $(4) \Rightarrow (1)$
+\end{enumerate}
+
+Доказательство:
+
+\begin{enumerate}
+    \item $(1) \Rightarrow (2)$ Пусть граф связный. Из этого следует существование $\ge 1$ простого пути между любыми двумя вершинами.
+
+    Пусть существуют $v_s, v_t \in V$, между которыми существует $\ge 2$ простых пути. Рассмотрим $E_1, E_2$ --- ребра первого и второго пути. Очевидно, что их \texttt{xor} ($E_1 \cup E_2 \setminus E_1 \cap E_2$) --- объединение циклов. 
+
+    \item $(2) \Rightarrow (3)$ Связность графа следует из того, что между любыми вершинами существует путь.
+
+    Докажем по индукции, что в таком графе на $n$ вершин ровно $n - 1$ ребро.
+
+    \textbf{База.} $n = 1$. Тогда ребер нет.
+    
+    \textbf{Переход.} Рассмотрим граф с $k + 1$ вершиной. Возьмем произвольную вершину $v$ и рассмотрим подграф $G' = \langle V \setminus \{v\}, \{{e \in E \mid v \notin e}\}\rangle$. $v$ инцидентна $\ge 1$ ребру, т. к. граф связный. Если ей инцидентно $\ge 2$ ребра, то рассмотрим вершины $u_1, u_2$, которым они инцидентны. Т. к. в подграфе $G'$ между ними существует простой путь, то существуют  $\ge 2$ простых пути из $v$ в $u_1$: $v \to u_1$ и $v \to u_2 \rightsquigarrow u_1$. Следовательно $G'$ и $v$ соединяет ровно одно ребро.
+
+    \item $(3) \Rightarrow (4)$
+    Предположим противное, пусть есть цикл. Тогда из него можно выделить простой цикл. Посмотрим на него: $v_1 \to v_2 \dots \to v_n \to v_1$. Для каждой вершины не из цикла рассмотрим первое ребро ее кратчайшего пути к вершине из цикла. Для каждой вершины это ребро будет уникальным. Но тогда в графе $\ge n + (|V| - n) = |V|$ ребер. 
+    
+    Получили противоречие.
+
+    \item $(4) \Rightarrow (1)$
+    Пусть граф не является связным. Тогда разобъем его на $m \ge 2$ компоненты связности.
+
+    По индукции докажем, что в связном графе без циклов ровно $|V| - 1$ ребро.
+
+    Тогда в нашем графе ровно $|V| - m < |V| - 1$ ребер.
+
+    Получили противоречие.
+\end{enumerate}
+
+$\blacksquare$
