--- a/solutions/logic/30.tex
+++ b/solutions/logic/30.tex
@@ -1,1 +1,33 @@
 \subsection{Двудольные графы и паросочетания. Теорема Холла.}
+
+\Def Граф $G = \langle L \cup R, E \rangle$ называется \textit{двудольным}, если $\forall (u, v) \in E$ $u$ и $v$ лежат в разных множествах $L, R$.
+
+\Def \textit{Паросочетанием} в графе называется набор попарно несмежных ребер.
+
+\Def Паросочетание называют \textit{совершенным}, если оно покрывает все вершины графа.
+
+\textbf{Теорема Холла.}
+
+В двудольном графе $G \; \exists$ паросочетание с участием всех вершин $L$.
+
+$\iff$
+
+$\forall A \in L$ количество соседей $A$ по паросочетанию --- $N(A) \ge |A|$.
+
+$\square$
+    \begin{itemize}
+        \item $\Rightarrow$ Если такое паросочетание существует, то количество соседей следует из определения паросочетания.
+        \item $\Leftarrow$ Будем доказывать индукцией по размеру $L$.
+
+        \textbf{База.} $|L| = 1$. Тогда у единственной вершины ровно один сосед. Выберем паросочетание с ним.
+
+        \textbf{Переход.} $|L| = k + 1$. Разделим $L$ на $(l, L' := L \setminus \{l\})$. По предположению индукции построим $P'$ --- паросочетание, покрывающее $L'$. Пусть $H$ --- множество всех достижимых из $l$ вершин, таких, что из $L \to R$ путь идет по любым ребрам, а из $R \to L$ только по ребрам из $P'$. Тогда в $H_R := H \cap R$ найдется хотя бы одна вершина $r : r \notin P'$. Иначе не будет выполнено условие на количество соседей для $H_L$. Тогда существует путь $l \rightsquigarrow r$, чередование вдоль которого увеличит размер паросочетания на 1.
+    \end{itemize}
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.25\linewidth]{30_1.png}
+        \caption{Пример увеличивающей цепи}
+        \label{fig:placeholder}
+    \end{figure}
+$\blacksquare$
