--- a/solutions/probability/25.tex
+++ b/solutions/probability/25.tex
@@ -8,7 +8,7 @@
 
 \Proof
 
-\textbf{Напоминание:} называем случайную величину $I$ индикатором события $A$, если $I=1$, если А произошло, а иначе $I=0$. Нужно помнить, что это Бернуллевская случайная величина, с параметром (и матожиданием) $p = P(I(A) = 1) = P(A)$. Другой, важный для доказательства факт: $I(A) + I(\overline{A}) = 1$
+\Remind называем случайную величину $I$ индикатором события $A$, если $I=1$, если А произошло, а иначе $I=0$. Нужно помнить, что это Бернуллевская случайная величина, с параметром (и матожиданием) $p = P(I(A) = 1) = P(A)$. Другой, важный для доказательства факт: $I(A) + I(\overline{A}) = 1$
 
 \[
 |\xi| = |\xi| \cdot I(|\xi| < x) + |\xi| \cdot I(|\xi| \geq x) = |\xi| (I(|\xi| < x) + I(|\xi| \geq x)) \geq |\xi| \cdot I(|\xi| \geq x) \geq x \cdot I(|\xi| \geq x).
@@ -20,7 +20,7 @@
 
 Осталось разделить обе части этого неравенства на положительное число $x$.
 
-\End
+\Endproof
 
 \textbf{Неравенство Чебышева.}
 Если существует $D\xi$, то $\forall \varepsilon > 0$ верно
@@ -41,11 +41,11 @@
 
 Первый переход сделан по неравенству Маркова, второй по определению дисперсии
 
-\End
+\Endproof
 
 
 \textbf{Закон больших чисел (Чебышева)}
-Для любой последовательности $\xi_1, \xi_2, \ldots$ попарно независимых и одинаково распределённых случайных величин с конечным вторым моментом (квадратом матожидания) $\mathbb{E}\xi_1^2 < \infty$ имеет место сходимость
+Для любой последовательности $\xi_1, \xi_2, \ldots$ попарно независимых и одинаково распределённых случайных величин с конечным вторым моментом $\mathbb{E}\xi_1^2 < \infty$ имеет место сходимость
 \[
 \frac{\xi_1 + \cdots + \xi_n}{n} \xrightarrow{p} \mathbb{E}\xi_1.
 \]
@@ -74,4 +74,27 @@
 
 Все переходы по свойствам дисперсии.
 
-\End
+\Endproof
+
+\Consequence \textbf{(Закон больших чисел Бернулли)}
+
+Пусть проводится $n$ независимых испытаний, в каждом из которых событие $A$ происходит с вероятностью $p$. Пусть $\nu_n$ — число наступлений события $A$ в $n$ испытаниях. Тогда относительная частота $\frac{\nu_n}{n}$ сходится по вероятности к $p$:
+\[
+\frac{\nu_n}{n} \xrightarrow{p} p.
+\]
+
+\Proof
+
+Введём индикаторы: $\xi_i = I(\text{событие } A \text{ произошло в } i\text{-м испытании})$. Тогда $\xi_i \sim Bern(p)$ — независимые одинаково распределённые случайные величины с
+\[
+\mathbb{E}\xi_i = p, \quad D\xi_i = p(1-p).
+\]
+
+Число успехов $\nu_n = \xi_1 + \ldots + \xi_n$. По ЗБЧ Чебышева:
+\[
+\frac{\nu_n}{n} = \frac{\xi_1 + \ldots + \xi_n}{n} \xrightarrow{p} \mathbb{E}\xi_1 = p.
+\]
+
+\Endproof
+
+\textbf{Замечание.} Этот результат даёт теоретическое обоснование \textit{статистическому определению вероятности}: если провести много испытаний, частота события будет близка к его вероятности.
