--- a/solutions/probability/24.tex
+++ b/solutions/probability/24.tex
@@ -2,9 +2,9 @@
 
 \Def
 \textit{Математическим ожиданием случайной величины} $\xi$, имеющей дискретное распределение, называется величина $\mathbb{E}\xi$, равная
-$
+\[
 \mathbb{E}\xi = \sum_{x \in X} x\mathbb{P}(\xi = x),
-$
+\]
 где $X$ — множество значений $\xi$.
 
 \Example
@@ -40,18 +40,54 @@ $
 \mathbb{E}\xi = \int_0^{\infty} \lambda x e^{-\lambda x} dx = -\int_0^{\infty} x d(e^{-\lambda x}) = \int_0^{\infty} e^{-\lambda x} dx = \frac{1}{\lambda}.
 \]
 
-2) Пусть $\xi \sim \mathcal{N}(a, \sigma^2)$, то есть $p_\xi(x) = \frac{1}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}}$.
-\[
-\mathbb{E}\xi = \int_{-\infty}^{+\infty} x p_\xi(x) dx
-= \int_{-\infty}^{+\infty} \frac{x}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}} dx
-= \int_{-\infty}^{+\infty} \frac{x-a+a}{\sqrt{2\pi\sigma^2}} e^{-\frac{(x-a)^2}{2\sigma^2}} dx
-\]
-\[
-= \sqrt{\frac{\sigma^2}{2\pi}} \int_{-\infty}^{+\infty} e^{-\frac{(x-a)^2}{2\sigma^2}} d\left( \frac{(x-a)^2}{2\sigma^2} \right) + a,
-\]
-так как $\int_{-\infty}^{+\infty} p_\xi(x) dx = 1$, поэтому $\mathbb{E}\xi = a$.
+2) Пусть $\xi \sim \mathcal{N}(a, \sigma^2)$, то есть $p_\xi(x) = \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{(x-a)^2}{2\sigma^2}}$.
 
-\textbf{Некоторые свойства:}
+По определению:
+\[
+\mathbb{E}\xi = \int_{-\infty}^{+\infty} x \cdot \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{(x-a)^2}{2\sigma^2}} dx.
+\]
+
+Сделаем замену переменной: $t = \dfrac{x - a}{\sigma}$, тогда $x = \sigma t + a$, $dx = \sigma\, dt$.
+
+При $x \to \pm\infty$ имеем $t \to \pm\infty$. Подставляем:
+\[
+\mathbb{E}\xi = \int_{-\infty}^{+\infty} (\sigma t + a) \cdot \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{t^2}{2}} \cdot \sigma\, dt
+= \int_{-\infty}^{+\infty} (\sigma t + a) \cdot \frac{1}{\sqrt{2\pi}} e^{-\frac{t^2}{2}} dt.
+\]
+
+Разобьём интеграл на два слагаемых:
+\[
+\mathbb{E}\xi = \underbrace{\int_{-\infty}^{+\infty} \sigma t \cdot \frac{1}{\sqrt{2\pi}} e^{-\frac{t^2}{2}} dt}_{I_1} + \underbrace{\int_{-\infty}^{+\infty} a \cdot \frac{1}{\sqrt{2\pi}} e^{-\frac{t^2}{2}} dt}_{I_2}.
+\]
+
+\textbf{Вычислим $I_1$:} Подынтегральная функция $t \cdot e^{-t^2/2}$ — \textit{нечётная} (произведение нечётной $t$ и чётной $e^{-t^2/2}$). Интеграл от нечётной функции по симметричному промежутку $(-\infty, +\infty)$ равен нулю:
+\[
+I_1 = \sigma \cdot \frac{1}{\sqrt{2\pi}} \int_{-\infty}^{+\infty} t \cdot e^{-\frac{t^2}{2}} dt = 0.
+\]
+
+\textbf{Вычислим $I_2$:} Заметим, что $\frac{1}{\sqrt{2\pi}} e^{-t^2/2}$ — это плотность стандартного нормального распределения $\mathcal{N}(0, 1)$. Интеграл от плотности по всей прямой равен 1:
+\[
+I_2 = a \cdot \underbrace{\int_{-\infty}^{+\infty} \frac{1}{\sqrt{2\pi}} e^{-\frac{t^2}{2}} dt}_{= 1} = a.
+\]
+
+Итого: $\mathbb{E}\xi = I_1 + I_2 = 0 + a = a$.
+
+\Def Случайные величины $\xi$ и $\eta$ называются \textit{независимыми}, если для любых борелевских множеств $A, B \subset \mathbb{R}$ события $\{\xi \in A\}$ и $\{\eta \in B\}$ независимы, то есть
+\[
+\mathbb{P}(\xi \in A, \eta \in B) = \mathbb{P}(\xi \in A) \cdot \mathbb{P}(\eta \in B).
+\]
+
+Эквивалентно: для дискретных случайных величин $\xi$ и $\eta$ независимы тогда и только тогда, когда
+\[
+\mathbb{P}(\xi = x, \eta = y) = \mathbb{P}(\xi = x) \cdot \mathbb{P}(\eta = y) \quad \text{для всех } x, y.
+\]
+
+Для абсолютно непрерывных: $\xi$ и $\eta$ независимы тогда и только тогда, когда совместная плотность $p_{\xi,\eta}(x, y)$ равна произведению маргинальных плотностей:
+\[
+p_{\xi,\eta}(x, y) = p_\xi(x) \cdot p_\eta(y).
+\]
+
+\Props
 
 \begin{enumerate}
   \item \textit{Если} $\mathbb{E}\xi$ \textit{существует, то} $\mathbb{E}(c\xi) = c\mathbb{E}\xi$. \textit{Если существуют и конечны} $\mathbb{E}\xi, \mathbb{E}\eta$, \textit{то существует и} $\mathbb{E}(\xi + \eta)$, \textit{причём} $\mathbb{E}(\xi + \eta) = \mathbb{E}\xi + \mathbb{E}\eta$.
@@ -88,16 +124,16 @@ $
 Доказательства для абсолютно непрерывных величин, глобально, аналогичны.
 
 \Def \textit{Дисперсией случайной величины} $\xi$ \textit{называется величина} 
-$
+\[
 D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2.
-$
+\]
 
 Эквивалентное определение:
 \[
-  D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2 = \mathbb{E}\xi^2 - 2\mathbb{E}\xi \cdot E\xi + \mathbb{E}(\mathbb{E}\xi)^2 = E\xi^2 - (E\xi)^2
+  D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2 = \mathbb{E}\xi^2 - 2\mathbb{E}\xi \cdot \mathbb{E}\xi + (\mathbb{E}\xi)^2 = \mathbb{E}\xi^2 - (\mathbb{E}\xi)^2
 \]
 
-\textbf{Некоторые свойства:}
+\Props
 
 \begin{enumerate}
   \item $D\xi \ge 0$
@@ -114,9 +150,46 @@ $
 
   Что завершает доказательство из выше приведенного свойства математического ожидания
 
-  \End 
+  \Endproof 
   
-  \textbf{Замечание:}  $\left( \mathbb{E}(\xi \eta) - \mathbb{E}\xi \mathbb{E}\eta \right)$ называется \textit{ковариацией}. Она равна нулю для независимых величин (обратное, в общем случае, неверно)
+  \textbf{Замечание.} Выражение $\mathbb{E}(\xi \eta) - \mathbb{E}\xi \mathbb{E}\eta$ в доказательстве — это \textit{ковариация}. Дадим формальные определения.
+
+  \Def \textit{Ковариацией} случайных величин $\xi$ и $\eta$ называется
+  \[
+  \text{cov}(\xi, \eta) = \mathbb{E}\left[(\xi - \mathbb{E}\xi)(\eta - \mathbb{E}\eta)\right] = \mathbb{E}(\xi\eta) - \mathbb{E}\xi \cdot \mathbb{E}\eta.
+  \]
+
+  \Def \textit{Коэффициентом корреляции} (Пирсона) случайных величин $\xi$ и $\eta$ называется
+  \[
+  \rho(\xi, \eta) = \frac{\text{cov}(\xi, \eta)}{\sqrt{D\xi} \cdot \sqrt{D\eta}} = \frac{\mathbb{E}(\xi\eta) - \mathbb{E}\xi \cdot \mathbb{E}\eta}{\sigma_\xi \cdot \sigma_\eta},
+  \]
+  где $\sigma_\xi = \sqrt{D\xi}$, $\sigma_\eta = \sqrt{D\eta}$ — стандартные отклонения.
+
+  \textbf{Свойства:}
+  \begin{itemize}
+      \item $-1 \leq \rho(\xi, \eta) \leq 1$;
+      \item Если $\xi$ и $\eta$ независимы, то $\text{cov}(\xi, \eta) = 0$ и $\rho(\xi, \eta) = 0$;
+      \item \textbf{Обратное неверно:} из $\text{cov}(\xi, \eta) = 0$ не следует независимость!
+  \end{itemize}
+
+  \Example \textbf{(Зависимые величины с нулевой ковариацией)}
+
+  Пусть $\xi \sim U[-1, 1]$ (равномерное на $[-1, 1]$), и $\eta = \xi^2$.
+
+  Величины $\xi$ и $\eta$ \textit{зависимы}: $\eta$ полностью определяется через $\xi$.
+
+  Покажем, что $\text{cov}(\xi, \eta) = 0$:
+  \[
+  \mathbb{E}\xi = \int_{-1}^{1} x \cdot \frac{1}{2}\, dx = 0 \quad \text{(симметрия относительно нуля)}.
+  \]
+  \[
+  \mathbb{E}(\xi \cdot \eta) = \mathbb{E}(\xi \cdot \xi^2) = \mathbb{E}\xi^3 = \int_{-1}^{1} x^3 \cdot \frac{1}{2}\, dx = 0 \quad \text{(нечётная функция)}.
+  \]
+  \[
+  \text{cov}(\xi, \eta) = \mathbb{E}(\xi\eta) - \mathbb{E}\xi \cdot \mathbb{E}\eta = 0 - 0 \cdot \mathbb{E}\eta = 0.
+  \]
+
+  Таким образом, $\text{cov}(\xi, \xi^2) = 0$, но $\xi$ и $\xi^2$ функционально зависимы.
 
   \item $Dc\xi = c^2 D\xi, \ c \in \R = const$
   \item $D(\xi + c) = D\xi, \ c \in \R = const$
@@ -137,7 +210,7 @@ D\xi = \mathbb{E}(\xi - \mathbb{E}\xi)^2 = \mathbb{E}(\xi - a)^2 = \int_{-\infty
 D\xi = \int_{-\infty}^{+\infty} \sigma^2 y^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{y^2}{2}} dy = \sigma^2 \int_{-\infty}^{+\infty} y^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{y^2}{2}} dy.
 \]
 
-Второй множитель - мат. ожидание квадрата стандартного нормального распределения (оно = 1), значит
+Второй множитель - мат. ожидание квадрата стандартного нормального распределения (оно = 1, поверьте), значит
 \[
 D\xi = \sigma^2 \cdot 1 = \sigma^2.
 \]
